2006-05-23  Thiemo Seufer  <ths@mips.com>

	* gas/mips/mips-gp32-fp64-pic.d, mips/mips-gp32-fp64.d,
	gas/mips/mips-gp64-fp32-pic.d, gas/mips/mips-gp64-fp32.l,
	gas/mips/mips-gp64-fp64.d: Adjust test cases to the changes assembler
	output.
	* gas/mips/mips-gp32-fp64.l, gas/mips/mips-gp64-fp32-pic.l: New files,
	catch assembler warnings.

2006-05-22  Nick Clifton  <nickc@redhat.com>

	* gas/mips/mips32-dsp.l: Fix expected unsigned decoding of -1 in
	warning messages.
	* gas/mips/mips32-mt.l: Likewise.

2006-05-19  Thiemo Seufer  <ths@mips.com>

	* gas/mips/vxworks1-el.d, gas/mips/vxworks1-xgot-el.d: Add little
	endian testcases.
	* gas/mips/vxworks1.d, gas/mips/vxworks1-xgot.d: Build as big endian.
	* gas/mips/mips.exp: Run new testcases.

2006-05-14  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>

	* gas/mips/mips.exp: Run new tests.
	* gas/mips/mips16e.s, gas/mips/mips16e.d, gas/mips/mips16e-64.s,
	gas/mips/mips16e-64.d, gas/mips/mips16e-64.l: New tests.

2006-05-11  Paul Brook  <paul@codesourcery.com>

	* gas/arm/local_function.d: New test.
	* gas/arm/local_function.s: New test.

2006-05-11  Thiemo Seufer  <ths@mips.com>

	* gas/mips/jal-range.l: Don't check the range of j or jal
	addresses.

2006-05-09  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/x86-64-gidt.d: Adjusted.

2006-05-09  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run x86-64-gidt.

	* gas/i386/x86-64-gidt.d: New file.
	* gas/i386/x86-64-gidt.s: Likewise.

2006-05-09  David Ung  <davidu@mips.com>

	* gas/mips/jal-range.l: Only warn about an out-of-range j or jal
	address.

2006-05-08  Thiemo Seufer  <ths@mips.com>

	* gas/mips/mips32.s, gas/mips/mips32.d: Extend testcase to check
	larger offset arguments for cache instructions.

2006-05-08  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>
            David Ung  <davidu@mips.com>

	* gas/mips/smartmips.s, gas/mips/smartmips.d: New smartmips test.
	* gas/mips/mips.exp: Run smartmips test.