@@ -1,3 +1,8 @@
+2006-05-25  Jie Zhang  <jie.zhang@analog.com>
+	
+	* gas/bfin/vector2.s, gas/bfin/vector2.d: Test to ensure (m) is not
+	thrown away.
+
 2006-05-23  Thiemo Seufer  <ths@mips.com>
 
 	* gas/mips/mips-gp32-fp64-pic.d, mips/mips-gp32-fp64.d,
